--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</h3>
 			<div class="row">
 				<div class="col-md-6 offset-md-3 text-center pb-4 about">
-					Hi, I'm Zong-Xi, I intrested in UI/UX and wanna become a front-end developer. In 2021, I started UI/UX course in Hahow and decided to do my portfolio website for present my work. 
+					Hi, I'm Zong-Xi, I interested in UI/UX and want to  become a front-end developer. In 2021, I started UI/UX course in Hahow and decided to do my portfolio website for present my work. 
 				</div>
 			</div>
 			<div class="row g-3">
