--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</h3>
 			<div class="row">
 				<div class="col-md-6 offset-md-3 text-center pb-4 about">
-					Hi, I'm Zong-Xi, I interested in UI/UX and want to  become a front-end developer. In 2021, I started UI/UX course in Hahow and decided to do my portfolio website for present my work. 
+					Hi, I'm Zong-Xi, I interested in UI/UX and want to become a front-end developer. In 2021, I started UI/UX course in Hahow and decided to do my portfolio website for present my work. 
 				</div>
 			</div>
 			<div class="row g-3">
@@ -134,7 +134,7 @@
 				</ul>
 				<div id="PortfolioContent" class="tab-content">
 					<div id="WebPanel" class="tab-pane fade show active" role="tabpanel" aria-labelledby="WebTab">
-						<div class="row g-3">
+						<div class="row g-3 mb-3">
 							<div class="col-md-4 col-sm-6 col-6 work">
 								<img src="https://i.imgur.com/SH4komV.png" alt="WeatherBox-UI" class="img-fluid">
 								<a href="https://maydayxi.github.io/Weather-Box-UI" target="_blank">
@@ -153,6 +153,22 @@
 								<img src="https://i.imgur.com/qny9l8g.png" alt="Shopping Cart UI" class="img-fluid">
 								<a href="https://maydayxi.github.io/Shopping-Cart-UI/" target="_blank">
 									<h4 class="title">Shopping Cart UI</h4>
+									<i class="fa-solid fa-arrow-right-long"></i>
+								</a>
+							</div>
+						</div>
+						<div class="row g-3">
+							<div class="col-md-4 col-sm-6 col-6 work">
+								<img src="https://imgur.com/7I7DQvb.png" alt="Memory Block" class="img-fluid">
+								<a href="https://maydayxi.github.io/Memory-Block/" target="_blank">
+									<h4 class="title">Memory Block</h4>
+									<i class="fa-solid fa-arrow-right-long"></i>
+								</a>
+							</div>
+							<div class="col-md-4 col-sm-6 col-6 work">
+								<img src="https://imgur.com/q56GJVO.png" alt="Classic Snake" class="img-fluid">
+								<a href="https://maydayxi.github.io/Memory-Block/" target="_blank">
+									<h4 class="title">Classic Snake</h4>
 									<i class="fa-solid fa-arrow-right-long"></i>
 								</a>
 							</div>
