--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 							</div>
 							<div class="col-md-4 col-sm-6 col-6 work">
 								<img src="https://imgur.com/q56GJVO.png" alt="Classic Snake" class="img-fluid">
-								<a href="https://maydayxi.github.io/Memory-Block/" target="_blank">
+								<a href="https://maydayxi.github.io/Classic-Snake/" target="_blank">
 									<h4 class="title">Classic Snake</h4>
 									<i class="fa-solid fa-arrow-right-long"></i>
 								</a>
